jemalloc.Api/jemalloc.cs

// ----------------------------------------------------------------------------
// <auto-generated>
// This is autogenerated code by CppSharp.
// Do not edit this file or all your changes will be lost after re-generation.
// </auto-generated>
// ----------------------------------------------------------------------------
using System;
using System.Runtime.InteropServices;
using System.Security;

namespace jemalloc
{
    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    public unsafe delegate void JeMallocMessagePtr(global::System.IntPtr _0, [MarshalAs(UnmanagedType.LPStr)] string _1);

    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    public unsafe delegate global::System.IntPtr ExtentAllocT(global::System.IntPtr _0, global::System.IntPtr _1, ulong _2, ulong _3, bool* _4, bool* _5, uint _6);

    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public unsafe delegate bool ExtentDallocT(global::System.IntPtr _0, global::System.IntPtr _1, ulong _2, [MarshalAs(UnmanagedType.I1)] bool _3, uint _4);

    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    public unsafe delegate void ExtentDestroyT(global::System.IntPtr _0, global::System.IntPtr _1, ulong _2, [MarshalAs(UnmanagedType.I1)] bool _3, uint _4);

    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public unsafe delegate bool ExtentCommitT(global::System.IntPtr _0, global::System.IntPtr _1, ulong _2, ulong _3, ulong _4, uint _5);

    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public unsafe delegate bool ExtentDecommitT(global::System.IntPtr _0, global::System.IntPtr _1, ulong _2, ulong _3, ulong _4, uint _5);

    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public unsafe delegate bool ExtentPurgeT(global::System.IntPtr _0, global::System.IntPtr _1, ulong _2, ulong _3, ulong _4, uint _5);

    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public unsafe delegate bool ExtentSplitT(global::System.IntPtr _0, global::System.IntPtr _1, ulong _2, ulong _3, ulong _4, [MarshalAs(UnmanagedType.I1)] bool _5, uint _6);

    [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public unsafe delegate bool ExtentMergeT(global::System.IntPtr _0, global::System.IntPtr _1, ulong _2, global::System.IntPtr _3, ulong _4, [MarshalAs(UnmanagedType.I1)] bool _5, uint _6);

    public unsafe partial class ExtentHooks : IDisposable
    {
        [StructLayout(LayoutKind.Explicit, Size = 72)]
        public partial struct __Internal
        {
            [FieldOffset(0)]
            internal global::System.IntPtr alloc;

            [FieldOffset(8)]
            internal global::System.IntPtr dalloc;

            [FieldOffset(16)]
            internal global::System.IntPtr destroy;

            [FieldOffset(24)]
            internal global::System.IntPtr commit;

            [FieldOffset(32)]
            internal global::System.IntPtr decommit;

            [FieldOffset(40)]
            internal global::System.IntPtr purge_lazy;

            [FieldOffset(48)]
            internal global::System.IntPtr purge_forced;

            [FieldOffset(56)]
            internal global::System.IntPtr split;

            [FieldOffset(64)]
            internal global::System.IntPtr merge;

            [SuppressUnmanagedCodeSecurity]
            [DllImport("jemalloc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="??0extent_hooks_s@@QEAA@AEBU0@@Z")]
            internal static extern global::System.IntPtr cctor(global::System.IntPtr instance, global::System.IntPtr _0);
        }

        public global::System.IntPtr __Instance { get; protected set; }

        protected int __PointerAdjustment;
        internal static readonly global::System.Collections.Concurrent.ConcurrentDictionary<IntPtr, global::jemalloc.ExtentHooks> NativeToManagedMap = new global::System.Collections.Concurrent.ConcurrentDictionary<IntPtr, global::jemalloc.ExtentHooks>();
        protected void*[] __OriginalVTables;

        protected bool __ownsNativeInstance;

        internal static global::jemalloc.ExtentHooks __CreateInstance(global::System.IntPtr native, bool skipVTables = false)
        {
            return new global::jemalloc.ExtentHooks(native.ToPointer(), skipVTables);
        }

        internal static global::jemalloc.ExtentHooks __CreateInstance(global::jemalloc.ExtentHooks.__Internal native, bool skipVTables = false)
        {
            return new global::jemalloc.ExtentHooks(native, skipVTables);
        }

        private static void* __CopyValue(global::jemalloc.ExtentHooks.__Internal native)
        {
            var ret = Marshal.AllocHGlobal(sizeof(global::jemalloc.ExtentHooks.__Internal));
            *(global::jemalloc.ExtentHooks.__Internal*) ret = native;
            return ret.ToPointer();
        }

        private ExtentHooks(global::jemalloc.ExtentHooks.__Internal native, bool skipVTables = false)
            : this(__CopyValue(native), skipVTables)
        {
            __ownsNativeInstance = true;
            NativeToManagedMap[__Instance] = this;
        }

        protected ExtentHooks(void* native, bool skipVTables = false)
        {
            if (native == null)
                return;
            __Instance = new global::System.IntPtr(native);
        }

        public ExtentHooks()
        {
            __Instance = Marshal.AllocHGlobal(sizeof(global::jemalloc.ExtentHooks.__Internal));
            __ownsNativeInstance = true;
            NativeToManagedMap[__Instance] = this;
        }

        public ExtentHooks(global::jemalloc.ExtentHooks _0)
        {
            __Instance = Marshal.AllocHGlobal(sizeof(global::jemalloc.ExtentHooks.__Internal));
            __ownsNativeInstance = true;
            NativeToManagedMap[__Instance] = this;
            *((global::jemalloc.ExtentHooks.__Internal*) __Instance) = *((global::jemalloc.ExtentHooks.__Internal*) _0.__Instance);
        }

        public void Dispose()
        {
            Dispose(disposing: true);
        }

        public virtual void Dispose(bool disposing)
        {
            if (__Instance == IntPtr.Zero)
                return;
            global::jemalloc.ExtentHooks __dummy;
            NativeToManagedMap.TryRemove(__Instance, out __dummy);
            if (__ownsNativeInstance)
                Marshal.FreeHGlobal(__Instance);
            __Instance = IntPtr.Zero;
        }
    }

    public unsafe partial class Je
    {
        public partial struct __Internal
        {
            [SuppressUnmanagedCodeSecurity]
            [DllImport("jemallocd", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="je_malloc")]
            internal static extern global::System.IntPtr JeMalloc(ulong size);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("jemallocd", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="je_calloc")]
            internal static extern global::System.IntPtr JeCalloc(ulong num, ulong size);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("jemallocd", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="je_posix_memalign")]
            internal static extern int JePosixMemalign(void** memptr, ulong alignment, ulong size);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("jemallocd", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="je_aligned_alloc")]
            internal static extern global::System.IntPtr JeAlignedAlloc(ulong alignment, ulong size);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("jemallocd", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="je_realloc")]
            internal static extern global::System.IntPtr JeRealloc(global::System.IntPtr ptr, ulong size);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("jemallocd", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="je_free")]
            internal static extern void JeFree(global::System.IntPtr ptr);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("jemallocd", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="je_mallocx")]
            internal static extern global::System.IntPtr JeMallocx(ulong size, int flags);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("jemallocd", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="je_rallocx")]
            internal static extern global::System.IntPtr JeRallocx(global::System.IntPtr ptr, ulong size, int flags);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("jemallocd", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="je_xallocx")]
            internal static extern ulong JeXallocx(global::System.IntPtr ptr, ulong size, ulong extra, int flags);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("jemallocd", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="je_sallocx")]
            internal static extern ulong JeSallocx(global::System.IntPtr ptr, int flags);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("jemallocd", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="je_dallocx")]
            internal static extern void JeDallocx(global::System.IntPtr ptr, int flags);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("jemallocd", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="je_sdallocx")]
            internal static extern void JeSdallocx(global::System.IntPtr ptr, ulong size, int flags);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("jemallocd", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="je_nallocx")]
            internal static extern ulong JeNallocx(ulong size, int flags);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("jemallocd", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="je_mallctl")]
            internal static extern int JeMallctl([MarshalAs(UnmanagedType.LPStr)] string name, global::System.IntPtr oldp, ulong* oldlenp, global::System.IntPtr newp, ulong newlen);
